byte-code-compiler/test_files/typing/good/testfile-call-recast.psc
i32 f(i32 x) { return x; }
i32 main() { return f('A') + f((u16) 1); }

