byte-code-compiler/test_files/typing/bad/testfile-redef-6.psc

struct S { int_32 a; };
int_32 f() {}
struct S* f() {}
int_32 main() {}
